Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.2.0
-
Windows 7 (64) MinGW
-
8ff480881a12d5517fe69d0cd540936b0660a37e
Description
Just created an app and set a breakpoint at:
QApplication a(argc, argv);
Started debugging, stopped at the correct line, but cannot step-in to the requested code.
Reproducible with a binary, MinGW-package from Oslo and SDK-shipped MinGW-SDK-package.
Introduced by 2d9de933612a63f0b863afc19e124752b62bb559, replacing the default mappings by a widget (not knowing that they are needed for broken Qt packages).
The problem is that these mappings are now used in CDB as well, so, applying them by default would throw CDB off.