Debugger: Always add Qt install source mappings for gdb.

As it fails for MinGW.

Task-number: QTCREATORBUG-4132
Reviewed-by: hjk