src/plugins/debugger/debuggerplugin.cpp
@@ -2377,6 +2377,8 @@ static QString formatStartParameters(DebuggerStartParameters &sp)
             str << " (built: " << QDir::toNativeSeparators(sp.projectBuildDir) << ')';
         str << '\n';
     }
+    if (!sp.qtInstallPath.isEmpty())
+        str << "Qt: " << QDir::toNativeSeparators(sp.qtInstallPath) << '\n';
     if (!sp.qmlServerAddress.isEmpty())
         str << "QML server: " << sp.qmlServerAddress << ':' << sp.qmlServerPort << '\n';
     if (!sp.remoteChannel.isEmpty()) {
